elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__aggr_aliased.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Aggregate {
            aggregates: [
                (
                    Call(
                        "sum",
                        [
                            Field(
                                "bytes",
                            ),
                        ],
                    ),
                    Some(
                        "total",
                    ),
                ),
                (
                    Call(
                        "count",
                        [],
                    ),
                    None,
                ),
            ],
            by: [
                Field(
                    "method",
                ),
            ],
        },
    ],
}
