elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__aggr_field.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Aggregate {
            aggregates: [
                (
                    Call(
                        "count",
                        [],
                    ),
                    None,
                ),
            ],
            by: [
                Field(
                    "method",
                ),
                Field(
                    "status",
                ),
            ],
        },
    ],
}
