elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__and_or_precedence.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Filter(
            Binary(
                Or,
                Field(
                    "a",
                ),
                Binary(
                    And,
                    Field(
                        "b",
                    ),
                    Field(
                        "c",
                    ),
                ),
            ),
        ),
    ],
}
