elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__basic_source.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [],
}
