elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__boolean_literal.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Filter(
            Binary(
                And,
                Binary(
                    Equal,
                    Field(
                        "active",
                    ),
                    Boolean(
                        true,
                    ),
                ),
                Binary(
                    Equal,
                    Field(
                        "deleted",
                    ),
                    Boolean(
                        false,
                    ),
                ),
            ),
        ),
    ],
}
