elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__fields_cmd.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Fields(
            [
                Field(
                    "name",
                ),
                Field(
                    "age",
                ),
                Field(
                    "active",
                ),
            ],
        ),
    ],
}
