elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__head.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Head(
            10,
        ),
    ],
}
