elucid/elucid-language/src/parser/snapshots/elucid_language__parser__tests__not_operator.snap
---
source: elucid-language/src/parser/mod.rs
expression: ast
---
Query {
    source: "test",
    commands: [
        Where(
            Binary(
                And,
                Not(
                    Field(
                        "active",
                    ),
                ),
                Binary(
                    Equal,
                    Not(
                        Field(
                            "deleted",
                        ),
                    ),
                    Boolean(
                        false,
                    ),
                ),
            ),
        ),
    ],
}
